--- a/index.html
+++ b/index.html
@@ -11,48 +11,174 @@
 
   <body>
     <header class="header" id="header">
-      <h1 class="title-hendrosetwn">hendrosetwn biography</h1>
+      <a class="title-hendrosetwn" href="#">hendrosetwn<span>.</span></a>
       <nav>
         <ul class="nav-header">
-          <li><a class="nav-header-text" href="#">home</a></li>
-          <li><a class="nav-header-text" href="#journey">journey</a></li>
-          <li><a class="nav-header-text" href="#skill">skill</a></li>
-          <li>
-            <a class="nav-header-text" href="#social-media">social media</a>
+          <li class="nav-header__list">
+            <a class="nav-header__text" href="#expertise">Expertise</a>
+          </li>
+          <li class="nav-header__list">
+            <a class="nav-header__text" href="#skill">Skills</a>
+          </li>
+          <li class="nav-header__list">
+            <a class="nav-header__text" href="#certificate">Certificates</a>
           </li>
         </ul>
       </nav>
     </header>
 
     <main class="main" id="main">
-      <article class="article">
-          <section class="section-one" id="journey">
-            <h2 class="title-section">My Journey</h2>
-          </section>
-          <section class="section-two" id="skill">
-            <h2 class="title-section">My Skill</h2>
-          </section>
-      </article>
+      <article class="biography">
+        <section class="biography__section">
+          <h2 class="biography__title">Biography</h2>
+          <p class="biography__text">
+            I'm a Frontend web developer. I spend my whole day, practically
+            every day, experimenting with HTML, CSS, and JavaScript; dabbling
+            with Framework, CSS Processor. I build websites that are fun and
+            informative. I did well.
+          </p>
+          <p class="biography__text">
+            I'm curious, and I enjoy a job that challenges me to learn something
+            new and progress in a different direction. I do my best to stay
+            abreast of changes in the programming so that I can take on
+            challenges with tools that are appropriate for the job at hand.
+          </p>
+          <p class="biography__text">
+            Besides working and coding, I love doing a running, street
+            photography and reading a book and a manhwa (korean comic). So, we
+            can also get to know each other. Let's connect with me :
+          </p>
+          <ul class="biography__socialmedia">
+            <li><a class="socialmedia__links" href="#">Instagram.</a></li>
+            <li><a class="socialmedia__links" href="#">Twitter.</a></li>
+            <li><a class="socialmedia__links" href="#">Linkedin.</a></li>
+            <li><a class="socialmedia__links" href="#">Github.</a></li>
+          </ul>
+          <p class="biography__text">
+            A slight clarification of the above: I am actually an experienced
+            construction worker for more than 7 years and my background is
+            non-IT. Since it was relatively clear early on that programming
+            would be easier to make a living, I've focused my energies on the
+            web, which happily has proven itself to be a wonderful decision.
+          </p>
+        </section>
+        <aside class="personal-info__aside">
+          <h3 class="aside__title">Hello! I'm Hendro</h3>
+          <p class="aside__bio">I'm a person who enthusiast with codes.</p>
 
-      <aside class="aside">
-        <h3 class="name">hendro setiawan</h3>
-        <img
-          class="profile"
-          src="./assets/images/profile_hendrosetwn.jpeg"
-          alt="profile hendrosetwn"
-        />
-        <h3 class="name">Frontend WebDev</h3>
-        <p class="subprofile">Living : <span>Tegal</span></p>
-        <p class="subprofile">Age : <span>26</span></p>
-        <p class="subprofile">Status : <span>single</span></p>
-        <p class="subprofile">Job : <span>TBA-</span></p>
-        <q class="quote">Once I care, I dont't leave. 
-            <br/> Once I leave, I don't care.</q>
-      </aside>
+          <img
+            class="aside__img"
+            src="./assets/images/profile_hendrosetwn.jpeg"
+            alt="profile-hendrosetwn"
+          />
+          <h3 class="aside__title">PERSONAL INFO</h3>
+          <p class="aside__text">Name: <span>Hendro Setiawan</span></p>
+          <p class="aside__text">Date of birth: <span>01.Oct.1995</span></p>
+          <p class="aside__text">
+            Email: <span>hendro.setiawan1995@gmail.com</span>
+          </p>
+          <p class="aside__text">Phone: <span> (+62) 822 2153 4313 </span></p>
+          <p class="aside__text">
+            Address: <span>Kabupaten Brebes, Jawa Tengah</span>
+          </p>
+          <p class="aside__text">Web: <span>hendrosetwn.com</span></p>
+        </aside>
+      </article>
+      <article class="experience" id="expertise">
+        <h2 class="experience__title">Work Experience</h2>
+        <section class="experience__section">
+          <div class="experience__lineone">
+            <p class="experience__date">Juli 2022 Current</p>
+            <button type="button" class="experience__btn">/[-.-]\</button>
+          </div>
+          <div class="experience__linetwo">
+            <p class="experience__position">Freelance Frontend Web Developer</p>
+            <p class="experience__office">Home, Brebes, Indonesia</p>
+          </div>
+          <ul class="task__container">
+            <li class="task">
+              Oversaw all makin website processes and procedures from
+              start-to-finish and monitoring myself.
+            </li>
+            <li class="task">
+              Maintained professional relationship with partner and owner.
+            </li>
+            <li class="task">Make contract for partner and owner.</li>
+            <li class="task">
+              Learning to scale up myself and searching job opportunities.
+            </li>
+          </ul>
+        </section>
+        <section class="experience__section">
+          <div class="experience__lineone">
+            <p class="experience__date">Juli 2022 Current</p>
+            <button type="button" class="experience__btn">/[-.-]\</button>
+          </div>
+          <div class="experience__linetwo">
+            <p class="experience__position">Freelance Frontend Web Developer</p>
+            <p class="experience__office">Home, Indonesia</p>
+          </div>
+          <ul class="task__container">
+            <li class="task">
+              Oversaw all makin website processes and procedures from
+              start-to-finish and monitoring myself.
+            </li>
+            <li class="task">
+              Maintained professional relationship with partner and owner.
+            </li>
+            <li class="task">Make contract for partner and owner.</li>
+            <li class="task">
+              Learning to scale up myself and searching job opportunities.
+            </li>
+          </ul>
+        </section>
+      </article>
+      <article class="education">
+        <h2 class="education__title">Education / Course</h2>
+        <section class="education__section">
+          <div class="education__lineone">
+            <p class="education__date">Feb 2022 Juni 2022</p>
+            <button type="button" class="education__btn">/[-.-]\</button>
+          </div>
+          <div class="education__linetwo">
+            <p class="education__position">Frontend App Development</p>
+            <p class="education__office">SALT Academy, Jakarta</p>
+          </div>
+          <ul class="task__container">
+            <li class="task">
+              Developed the skills needed to grow poblem solving, logical
+              thinking and best practice in programming frontend web.
+            </li>
+            <li class="task">
+              Develop basic web programming skills: HTML, CSS, Javascript
+            </li>
+            <li class="task">
+              Developed the skills using framework and library in frontend web.
+            </li>
+          </ul>
+        </section>
+        <section class="education__section">
+          <div class="education__lineone">
+            <p class="education__date">Juni 2022 Current</p>
+            <button type="button" class="education__btn">/[-.-]\</button>
+          </div>
+          <div class="education__linetwo">
+            <p class="education__position">Learn Basic Web Programming</p>
+            <p class="education__office">Dicoding, Online</p>
+          </div>
+          <ul class="task__container">
+            <li class="task">Learn to know about Website, Server and Client</li>
+            <li class="task">Learn basic HTML, CSS and Javascript</li>
+            <li class="task">Learn Styling using FLoat and Flexbox</li>
+            <li class="task">Learn Javscript DOM</li>
+            <li class="task">Learn to know about Web Storage</li>
+          </ul>
+        </section>
+      </article>
     </main>
 
     <footer class="footer" id="footer">
-      <p class="copyright">&copy; 2022 hendrosetwn</p>
+      <p class="copyright">&copy; 2022 hendrosetwn, All Right Reserved</p>
     </footer>
 
     <script src="./script/main.js"></script>
