final desktop mode

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Submission hendrosetwn</title>
+    <title>hendrosetwn biography</title>
 
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
@@ -18,10 +18,10 @@
             <a class="nav-header__text" href="#expertise">Expertise</a>
           </li>
           <li class="nav-header__list">
-            <a class="nav-header__text" href="#skill">Skills</a>
+            <a class="nav-header__text" href="#skills">Skills</a>
           </li>
           <li class="nav-header__list">
-            <a class="nav-header__text" href="#certificate">Certificates</a>
+            <a class="nav-header__text" href="#certificates">Certificates</a>
           </li>
         </ul>
       </nav>
@@ -84,101 +84,265 @@
           <p class="aside__text">Web: <span>hendrosetwn.com</span></p>
         </aside>
       </article>
-      <article class="experience" id="expertise">
-        <h2 class="experience__title">Work Experience</h2>
-        <section class="experience__section">
-          <div class="experience__lineone">
-            <p class="experience__date">Juli 2022 Current</p>
-            <button type="button" class="experience__btn">/[-.-]\</button>
+      <article class="expertise" id="expertise">
+        <h2 class="expertise__title">Work Experience</h2>
+        <div class="expertise__wrapper">
+          <div class="expertise__wrapper__section">
+            <section class="expertise__section">
+              <div class="expertise__lineone">
+                <p class="expertise__date">Juli 2022 Current</p>
+                <img
+                  src="./assets/images/eye-solid.svg"
+                  alt="eye"
+                  class="expertise__btn"
+                />
+              </div>
+              <div class="expertise__linetwo">
+                <p class="expertise__position">
+                  Freelance Frontend Web Developer
+                </p>
+                <p class="expertise__office">Home, Indonesia</p>
+              </div>
+              <ul class="task__container">
+                <li class="task">
+                  Oversaw all makin website processes and procedures from
+                  start-to-finish and monitoring myself.
+                </li>
+                <li class="task">
+                  Maintained professional relationship with partner and owner.
+                </li>
+                <li class="task">Make contract for partner and owner.</li>
+                <li class="task">
+                  Learning to scale up myself and searching job opportunities.
+                </li>
+              </ul>
+            </section>
+            <section class="expertise__section">
+              <div class="expertise__lineone">
+                <p class="expertise__date">Juli 2022 Current</p>
+                <img
+                  src="./assets/images/eye-solid.svg"
+                  alt="eye"
+                  class="expertise__btn"
+                />
+              </div>
+              <div class="expertise__linetwo">
+                <p class="expertise__position">
+                  Freelance Frontend Web Developer
+                </p>
+                <p class="expertise__office">Home, Indonesia</p>
+              </div>
+              <ul class="task__container">
+                <li class="task">
+                  Oversaw all makin website processes and procedures from
+                  start-to-finish and monitoring myself.
+                </li>
+                <li class="task">
+                  Maintained professional relationship with partner and owner.
+                </li>
+                <li class="task">Make contract for partner and owner.</li>
+                <li class="task">
+                  Learning to scale up myself and searching job opportunities.
+                </li>
+              </ul>
+            </section>
           </div>
-          <div class="experience__linetwo">
-            <p class="experience__position">Freelance Frontend Web Developer</p>
-            <p class="experience__office">Home, Brebes, Indonesia</p>
+          <aside class="expertise__aside">
+            <figure class="expertise__figure">
+              <img src="./assets/images/work01.webp" alt="First Work" />
+              <figcaption>Work 1 - This photo is fake</figcaption>
+            </figure>
+            <figure class="expertise__figure">
+              <img src="./assets/images/work02.webp" alt="Second Work" />
+              <figcaption>Work 2 - This photo is fake</figcaption>
+            </figure>
+          </aside>
+        </div>
+      </article>
+      <article class="expertise">
+        <h2 class="expertise__title">Education / Course</h2>
+        <div class="expertise__wrapper">
+          <div class="expertise__wrapper__section">
+            <section class="expertise__section">
+              <div class="expertise__lineone">
+                <p class="expertise__date">Feb 2022 Juni 2022</p>
+                <img
+                  src="./assets/images/eye-solid.svg"
+                  alt="eye"
+                  class="expertise__btn"
+                />
+              </div>
+              <div class="expertise__linetwo">
+                <p class="expertise__position">Frontend App Development</p>
+                <p class="expertise__office">SALT Academy, Jakarta</p>
+              </div>
+              <ul class="task__container">
+                <li class="task">
+                  Developed the skills needed to grow poblem solving, logical
+                  thinking and best practice in programming frontend web.
+                </li>
+                <li class="task">
+                  Develop basic web programming skills: HTML, CSS, Javascript
+                </li>
+                <li class="task">
+                  Developed the skills using framework and library in frontend
+                  web.
+                </li>
+              </ul>
+            </section>
+            <section class="expertise__section">
+              <div class="expertise__lineone">
+                <p class="expertise__date">Juni 2022 Current</p>
+                <img
+                  src="./assets/images/eye-solid.svg"
+                  alt="eye"
+                  class="expertise__btn"
+                />
+              </div>
+              <div class="expertise__linetwo">
+                <p class="expertise__position">Learn Basic Web Programming</p>
+                <p class="expertise__office">Dicoding, Online</p>
+              </div>
+              <ul class="task__container">
+                <li class="task">
+                  Learn to know about Website, Server and Client
+                </li>
+                <li class="task">Learn basic HTML, CSS and Javascript</li>
+                <li class="task">Learn Styling using FLoat and Flexbox</li>
+                <li class="task">Learn Javscript DOM</li>
+                <li class="task">Learn to know about Web Storage</li>
+              </ul>
+            </section>
           </div>
-          <ul class="task__container">
-            <li class="task">
-              Oversaw all makin website processes and procedures from
-              start-to-finish and monitoring myself.
-            </li>
-            <li class="task">
-              Maintained professional relationship with partner and owner.
-            </li>
-            <li class="task">Make contract for partner and owner.</li>
-            <li class="task">
-              Learning to scale up myself and searching job opportunities.
-            </li>
-          </ul>
-        </section>
-        <section class="experience__section">
-          <div class="experience__lineone">
-            <p class="experience__date">Juli 2022 Current</p>
-            <button type="button" class="experience__btn">/[-.-]\</button>
+          <aside class="expertise__aside">
+            <figure class="expertise__figure">
+              <img src="./assets/images/course01.webp" alt="First Course" />
+              <figcaption>Course 1 - This photo is fake</figcaption>
+            </figure>
+            <figure class="expertise__figure">
+              <img src="./assets/images/course02.webp" alt="Second Course" />
+              <figcaption>Course 2 - This photo is fake</figcaption>
+            </figure>
+          </aside>
+        </div>
+      </article>
+      <article class="skills" id="skills">
+        <h2 class="skills__title">Skills</h2>
+        <section class="skills__section">
+          <div class="skills__wrapper">
+            <h4 class="skills__subtitle">Basic Frontend Developer</h4>
+            <ul class="skills__biglist">
+              <li class="skills__list">HTML<span>Expert</span></li>
+              <li class="skills__list">CSS<span>Intermediate</span></li>
+              <li class="skills__list">Javascript<span>Intermediate</span></li>
+            </ul>
           </div>
-          <div class="experience__linetwo">
-            <p class="experience__position">Freelance Frontend Web Developer</p>
-            <p class="experience__office">Home, Indonesia</p>
+          <div class="skills__wrapper">
+            <h4 class="skills__subtitle">CSS Framework</h4>
+            <ul class="skills__biglist">
+              <li class="skills__list">Bootstrap<span>Intermediate</span></li>
+              <li class="skills__list">Tailwind<span>Basic</span></li>
+              <li class="skills__list">UI Kit<span>Not yet</span></li>
+            </ul>
           </div>
-          <ul class="task__container">
-            <li class="task">
-              Oversaw all makin website processes and procedures from
-              start-to-finish and monitoring myself.
-            </li>
-            <li class="task">
-              Maintained professional relationship with partner and owner.
-            </li>
-            <li class="task">Make contract for partner and owner.</li>
-            <li class="task">
-              Learning to scale up myself and searching job opportunities.
-            </li>
-          </ul>
+          <div class="skills__wrapper">
+            <h4 class="skills__subtitle">Javascript Framework</h4>
+            <ul class="skills__biglist">
+              <li class="skills__list">React.js<span>Basic</span></li>
+              <li class="skills__list">Angular<span>Not yet</span></li>
+              <li class="skills__list">Typescript<span>Not yet</span></li>
+            </ul>
+          </div>
+          <div class="skills__wrapper">
+            <h4 class="skills__subtitle">soft skills</h4>
+            <ul class="skills__biglist">
+              <li class="skills__list">Logical Thinking <span>Good</span></li>
+              <li class="skills__list">Problem Solver <span>Good</span></li>
+              <li class="skills__list">
+                Interest to Learn <span>Expert</span>
+              </li>
+            </ul>
+          </div>
+          <div class="skills__wrapper">
+            <h4 class="skills__subtitle">tools</h4>
+            <ul class="skills__biglist">
+              <li class="skills__list">Visual Studio Code <span>Good</span></li>
+              <li class="skills__list">Figma <span>Basic</span></li>
+              <li class="skills__list">Ms. Office <span>Expert</span></li>
+            </ul>
+          </div>
+          <div class="skills__wrapper">
+            <h4 class="skills__subtitle">language</h4>
+            <ul class="skills__biglist">
+              <li class="skills__list">
+                Indonesian (Native) <span>Expert</span>
+              </li>
+              <li class="skills__list">English (Limited) <span>Basic</span></li>
+              <li class="skills__list">German (Limited) <span>Basic</span></li>
+            </ul>
+          </div>
         </section>
       </article>
-      <article class="education">
-        <h2 class="education__title">Education / Course</h2>
-        <section class="education__section">
-          <div class="education__lineone">
-            <p class="education__date">Feb 2022 Juni 2022</p>
-            <button type="button" class="education__btn">/[-.-]\</button>
+      <article class="certificates" id="certificates">
+        <h2 class="certificates__title">certificates</h2>
+        <section class="certificates__section">
+          <div class="certificates__wrapper">
+            <img
+              class="certificates__img"
+              src="./assets/images/freecodecamp.webp"
+              alt="freecodecamp"
+            />
+            <div class="certificates__text">
+              <p class="certificates__name">Responsive Web Design</p>
+              <p class="certificates__office">freeCodeCamp.org</p>
+            </div>
           </div>
-          <div class="education__linetwo">
-            <p class="education__position">Frontend App Development</p>
-            <p class="education__office">SALT Academy, Jakarta</p>
+          <div class="certificates__wrapper">
+            <img
+              class="certificates__img"
+              src="./assets/images/dicoding.png"
+              alt="dicoding"
+            />
+            <div class="certificates__text">
+              <p class="certificates__name">Pemrograman web dasar</p>
+              <p class="certificates__office">Dicoding Indonesia</p>
+            </div>
           </div>
-          <ul class="task__container">
-            <li class="task">
-              Developed the skills needed to grow poblem solving, logical
-              thinking and best practice in programming frontend web.
-            </li>
-            <li class="task">
-              Develop basic web programming skills: HTML, CSS, Javascript
-            </li>
-            <li class="task">
-              Developed the skills using framework and library in frontend web.
-            </li>
-          </ul>
-        </section>
-        <section class="education__section">
-          <div class="education__lineone">
-            <p class="education__date">Juni 2022 Current</p>
-            <button type="button" class="education__btn">/[-.-]\</button>
+          <div class="certificates__wrapper">
+            <img
+              class="certificates__img"
+              src="./assets/images/saltacademy.jpeg"
+              alt="salt-academy"
+            />
+            <div class="certificates__text">
+              <p class="certificates__name">Frontend App Development</p>
+              <p class="certificates__office">SALT Academy</p>
+            </div>
           </div>
-          <div class="education__linetwo">
-            <p class="education__position">Learn Basic Web Programming</p>
-            <p class="education__office">Dicoding, Online</p>
+          <div class="certificates__wrapper">
+            <img
+              class="certificates__img"
+              src="./assets/images/frontend.png"
+              alt="frontend"
+            />
+            <div class="certificates__text">
+              <p class="certificates__name">Frontend Web Development</p>
+              <p class="certificates__office">Ngobar Kita</p>
+            </div>
           </div>
-          <ul class="task__container">
-            <li class="task">Learn to know about Website, Server and Client</li>
-            <li class="task">Learn basic HTML, CSS and Javascript</li>
-            <li class="task">Learn Styling using FLoat and Flexbox</li>
-            <li class="task">Learn Javscript DOM</li>
-            <li class="task">Learn to know about Web Storage</li>
-          </ul>
         </section>
       </article>
     </main>
 
     <footer class="footer" id="footer">
-      <p class="copyright">&copy; 2022 hendrosetwn, All Right Reserved</p>
+      <h2 class="footer__title">Let's work together on your next project.</h2>
+      <div class="footer__email">
+        <p class="footer__text">write to</p>
+        <a class="footer__links">hendro.setiawan1995@gmail.com</a>
+      </div>
+      <p class="footer__copyright">
+        &copy; 2022 hendrosetwn, All Right Reserved
+      </p>
     </footer>
 
     <script src="./script/main.js"></script>
