--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
           </li>
         </ul>
       </nav>
+      <img
+        class="nav-header__bars"
+        src="./assets/images/bars-solid.svg"
+        alt="bars"
+      />
     </header>
 
     <main class="main" id="main">
@@ -49,10 +54,64 @@
             can also get to know each other. Let's connect with me :
           </p>
           <ul class="biography__socialmedia">
-            <li><a class="socialmedia__links" href="#">Instagram.</a></li>
-            <li><a class="socialmedia__links" href="#">Twitter.</a></li>
-            <li><a class="socialmedia__links" href="#">Linkedin.</a></li>
-            <li><a class="socialmedia__links" href="#">Github.</a></li>
+            <li>
+              <a
+                class="socialmedia__links"
+                href="https://www.instagram.com/hendrosetwn/"
+                >Instagram.</a
+              >
+            </li>
+            <li>
+              <a
+                class="socialmedia__links"
+                href="https://www.twitter.com/hendrosetwn/"
+                >Twitter.</a
+              >
+            </li>
+            <li>
+              <a
+                class="socialmedia__links"
+                href="https://www.linkedin.com/in/hendro-setiawan-027835165/"
+                >Linkedin.</a
+              >
+            </li>
+            <li>
+              <a
+                class="socialmedia__links"
+                href="https://github.com/hendrosetwn"
+                >Github.</a
+              >
+            </li>
+          </ul>
+          <ul class="biography__socialmedia mobile">
+            <li>
+              <a
+                class="socialmedia__links"
+                href="https://www.instagram.com/hendrosetwn/"
+                >IG.</a
+              >
+            </li>
+            <li>
+              <a
+                class="socialmedia__links"
+                href="https://www.twitter.com/hendrosetwn/"
+                >TW.</a
+              >
+            </li>
+            <li>
+              <a
+                class="socialmedia__links"
+                href="https://www.linkedin.com/in/hendro-setiawan-027835165/"
+                >LI.</a
+              >
+            </li>
+            <li>
+              <a
+                class="socialmedia__links"
+                href="https://github.com/hendrosetwn"
+                >GH.</a
+              >
+            </li>
           </ul>
           <p class="biography__text">
             A slight clarification of the above: I am actually an experienced
@@ -74,9 +133,7 @@
           <h3 class="aside__title">PERSONAL INFO</h3>
           <p class="aside__text">Name: <span>Hendro Setiawan</span></p>
           <p class="aside__text">Date of birth: <span>01.Oct.1995</span></p>
-          <p class="aside__text">
-            Email: <span>hendro.setiawan1995@gmail.com</span>
-          </p>
+          <p class="aside__text">Email: <span>hendrosetwn@gmail.com</span></p>
           <p class="aside__text">Phone: <span> (+62) 822 2153 4313 </span></p>
           <p class="aside__text">
             Address: <span>Kabupaten Brebes, Jawa Tengah</span>
@@ -93,8 +150,13 @@
                 <p class="expertise__date">Juli 2022 Current</p>
                 <img
                   src="./assets/images/eye-solid.svg"
-                  alt="eye"
-                  class="expertise__btn"
+                  alt="open"
+                  class="expertise__btn--open"
+                />
+                <img
+                  src="./assets/images/eye-slash-solid.svg"
+                  alt="close"
+                  class="expertise__btn--close"
                 />
               </div>
               <div class="expertise__linetwo">
@@ -122,8 +184,13 @@
                 <p class="expertise__date">Juli 2022 Current</p>
                 <img
                   src="./assets/images/eye-solid.svg"
-                  alt="eye"
-                  class="expertise__btn"
+                  alt="open"
+                  class="expertise__btn--open"
+                />
+                <img
+                  src="./assets/images/eye-slash-solid.svg"
+                  alt="close"
+                  class="expertise__btn--close"
                 />
               </div>
               <div class="expertise__linetwo">
@@ -150,11 +217,11 @@
           <aside class="expertise__aside">
             <figure class="expertise__figure">
               <img src="./assets/images/work01.webp" alt="First Work" />
-              <figcaption>Work 1 - This photo is fake</figcaption>
+              <figcaption>Work 1 - This photo is dummy</figcaption>
             </figure>
             <figure class="expertise__figure">
               <img src="./assets/images/work02.webp" alt="Second Work" />
-              <figcaption>Work 2 - This photo is fake</figcaption>
+              <figcaption>Work 2 - This photo is dummy</figcaption>
             </figure>
           </aside>
         </div>
@@ -168,8 +235,13 @@
                 <p class="expertise__date">Feb 2022 Juni 2022</p>
                 <img
                   src="./assets/images/eye-solid.svg"
-                  alt="eye"
-                  class="expertise__btn"
+                  alt="open"
+                  class="expertise__btn--open"
+                />
+                <img
+                  src="./assets/images/eye-slash-solid.svg"
+                  alt="close"
+                  class="expertise__btn--close"
                 />
               </div>
               <div class="expertise__linetwo">
@@ -195,8 +267,13 @@
                 <p class="expertise__date">Juni 2022 Current</p>
                 <img
                   src="./assets/images/eye-solid.svg"
-                  alt="eye"
-                  class="expertise__btn"
+                  alt="open"
+                  class="expertise__btn--open"
+                />
+                <img
+                  src="./assets/images/eye-slash-solid.svg"
+                  alt="close"
+                  class="expertise__btn--close"
                 />
               </div>
               <div class="expertise__linetwo">
@@ -217,11 +294,11 @@
           <aside class="expertise__aside">
             <figure class="expertise__figure">
               <img src="./assets/images/course01.webp" alt="First Course" />
-              <figcaption>Course 1 - This photo is fake</figcaption>
+              <figcaption>Course 1 - This photo is dummy</figcaption>
             </figure>
             <figure class="expertise__figure">
               <img src="./assets/images/course02.webp" alt="Second Course" />
-              <figcaption>Course 2 - This photo is fake</figcaption>
+              <figcaption>Course 2 - This photo is dummy</figcaption>
             </figure>
           </aside>
         </div>
@@ -338,53 +415,19 @@
       <h2 class="footer__title">Let's work together on your next project.</h2>
       <div class="footer__email">
         <p class="footer__text">write to</p>
-        <a class="footer__links">hendro.setiawan1995@gmail.com</a>
+        <a class="footer__links" href="mailto:hendrosetwn@gmail.com"
+          >hendrosetwn@gmail.com</a
+        >
       </div>
       <p class="footer__copyright">
-        &copy; 2022 hendrosetwn, All Right Reserved
+        &copy; 2022 hendrosetwn<span>, All Right Reserved</span>
       </p>
+
+      <button class="btn__fixed">
+        <img src="./assets/images/chevron-up-solid.svg" alt="arrow top" />
+      </button>
     </footer>
 
     <script src="./script/main.js"></script>
   </body>
 </html>
-
-<!-- 
-Terdapat elemen <header>, <footer>, <main>, <article>, dan <aside> di berkas HTML.
-Masing-masing elemen wajib berisi konten yang peruntukkannya sesuai dengan elemen tersebut (menerapkan konsep semantic HTML dalam menyusun struktur website).
-Sebagai contoh: Header berisi judul dan navigation. Sedangkan konten artikel tidak boleh berada pada Header.
-Wajib menampilkan identitas diri (biodata diri) yang minimal harus berisi foto asli diri dan nama sesuai profil Dicoding. Identitas diri wajib ditampilkan dalam elemen <aside>.
-Menyusun layout dengan menggunakan float atau flexbox.
-Tema yang ditampilkan bebas, kecuali tema Bandung.
-Semakin detail dan lengkap website Anda maka nilai submission bisa lebih tinggi.
-
-
-
-Submission Anda akan dinilai oleh reviewer dengan skala 1-5 berdasarkan dari parameter yang ada. Anda dapat menerapkan beberapa saran untuk mendapatkan nilai tinggi, berikut sarannya:
-
-Menerapkan tampilan aplikasi yang menarik:
-Memiliki pemilihan warna yang pas dengan tema aplikasi (Dalam memilih warna, Anda dapat memanfaatkan tools pemilihan warna seperti colorhunt.co).
-Tata letak elemen yang pas.
-Contoh : Tidak ada konten yang bertumpuk.
-Penggunaan font yang pas dengan tema.
-Penerapan padding dan margin yang pas.
-
-Menerapkan layout yang responsif: 
-Menggunakan media query untuk menyesuaikan layout pada berbagai ukuran layar device.
-Pastikan untuk tidak terdapat konten yang menumpuk maupun keluar dari kontainer ketika dicoba pada dekstop, tablet, dan juga mobile.
-Menerapkan flexbox dalam menyusun layout.
-
-Terdapat penerapan JavaScript dalam memanipulasi DOM, seperti: (pilih satu)
-Membuat drop down.
-Memanfaatkan logika seperti looping dalam menampilkan elemen dan konten.
-Membuat slider.
-dan lainnya yang mendukung tampilan website agar lebih hidup.
-
-
-
-Tidak memenuhi kriteria yang sudah ditentukan.
-Menggunakan library Bootstrap, Materialize, Foundation, ataupun library lain yang semacamnya untuk menyusun layout.
-Menggunakan template project yang didapat selain dari latihan Dicoding.
-Menggunakan tema mengenai Kota Bandung, maupun mengirimkan ulang beberapa project yang dipelajari pada modul latihan
-Informasi yang ditampilkan tidak relevan. Salah satu contohnya adalah menggunakan text placeholder seperti lorem ipsum sebagai konten dari web yang dibuat.
- -->
