change css to sass

--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hendrosetwn biography</title>
 
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
 
   <body>
     <header class="header" id="header">
-      <a class="title-hendrosetwn" href="#">hendrosetwn<span>.</span></a>
+      <a class="header__title" href="#">hendrosetwn<span>.</span></a>
       <nav>
-        <ul class="nav-header">
-          <li class="nav-header__list">
-            <a class="nav-header__text" href="#expertise">Expertise</a>
+        <ul class="header__nav">
+          <li class="header__list">
+            <a class="header__text" href="#expertise">Expertise</a>
           </li>
-          <li class="nav-header__list">
-            <a class="nav-header__text" href="#skills">Skills</a>
+          <li class="header__list">
+            <a class="header__text" href="#skills">Skills</a>
           </li>
-          <li class="nav-header__list">
-            <a class="nav-header__text" href="#certificates">Certificates</a>
+          <li class="header__list">
+            <a class="header__text" href="#certificates">Certificates</a>
           </li>
         </ul>
       </nav>
       <img
-        class="nav-header__bars"
+        class="header__image"
         src="./assets/images/bars-solid.svg"
         alt="bars"
       />
@@ -423,8 +423,8 @@
         &copy; 2022 hendrosetwn<span>, All Right Reserved</span>
       </p>
 
-      <button class="btn__fixed">
-        <img src="./assets/images/chevron-up-solid.svg" alt="arrow top" />
+      <button class="footer__btn">
+        <i class="bi bi-arrow-up-square-fill"></i>
       </button>
     </footer>
 
